ash-code/tui/src/app/snapshots/app__mode_tests__fullscreen_detail_is_not_replaced_by_inline_detail.snap
---
source: ash-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
  ┌── Fullscreen detail ───────────────────[✗]─┐  
  │                                            │  
  │  Text: full detail                         │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │  ↑/↓ scroll  ·  Esc to close               │  
  └────────────────────────────────────────────┘
