ash-code/tui/src/app/snapshots/app__mode_tests__fullscreen_home_after_inline_navigation.snap
---
source: ash-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
  ╭────────────────────────────────────────────╮  
  │                                            │  
  │  Ash Code v0.1.0                          │  
  │  Resume session                            │  
  │  Dashboard                                 │  
  │  Settings                                  │  
  │  Help and shortcuts                        │  
  ╰────────────────────────────────────────────╯  
  ⏸ ask permissions on                            
  ╭────────────────────────────────────────────╮  
  │ >                                          │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Enter send  ·  Tab actions  ·  / commands
