ash-code/tui/src/app/snapshots/app__mode_tests__fullscreen_preview_receives_own_reply.snap
---
source: ash-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
fullscreen preview failed                         
  Preview · first session · read only             
  Esc to close
