ash-code/tui/src/app/snapshots/app__mode_tests__home_draft_is_separate_from_current_conversation.snap
---
source: ash-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  ⏸ ask permissions on                            
  ╭────────────────────────────────────────────╮  
  │ > new task draft                           │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Enter send  ·  / commands
