ash-code/tui/src/app/snapshots/app__mode_tests__inline_manager_own_selection.snap
---
source: ash-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
    ▄  ▄     Ash Code v0.1.0                     
  ▗█▛██▜█▖   Automatic model · Access unknown     
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
                                                  
  Idle (2)                                        
> ○ first session                                 
  ○ second session                                
  Archived (0)                                    
                                                  
──────────────────────────────────────────────────
>                                                 
──────────────────────────────────────────────────
                                                  
  Enter to open · Esc to return
